--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install dependencies and build
-      run: |
-        npm ci
-        npm run build
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 14
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build application
+      run: npm run build
 
     - name: Create or switch to gh-pages branch
       run: |
         git branch -D gh-pages || true
         git checkout -b gh-pages
         git rm -r canva/build/*
+        mv build canva/
         git add -f canva/build
 
     - name: Commit build artifacts to gh-pages branch
