add change directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         node-version: 14
 
+    - name: Change directory to canva
+      run: cd canva
+      
     - name: Install dependencies
       run: npm install
 
