--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,11 @@ jobs:
       with:
         node-version: 14
 
-    - name: Change directory to canva
-      run: cd canva
-      
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build application
-      run: npm run build
+    - name: Install dependencies and build
+      run: |
+        cd canva
+        npm install
+        npm run build 
 
     - name: Create or switch to gh-pages branch
       run: |
