--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Ensure gh-pages branch exists
+      run: |
+        git fetch origin gh-pages:gh-pages || git checkout -b gh-pages origin/gh-pages
+
     - name: Switch to gh-pages and merge with main
       run: |
         git checkout gh-pages
