--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set Git identity
+      run: |
+        git config --local user.email "nathanmarques20@yahoo.com.br"
+        git config --local user.name "NathanMarques2001"
+
     - name: Ensure gh-pages branch exists
       run: |
         git fetch origin gh-pages:gh-pages || git checkout -b gh-pages origin/gh-pages
