--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,34 +13,27 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set Git identity
-      run: |
-        git config --local user.email "nathanmarques20@yahoo.com.br"
-        git config --local user.name "NathanMarques2001"
-
     - name: Ensure gh-pages branch exists
       run: |
-        git fetch origin gh-pages:gh-pages || git checkout -b gh-pages origin/gh-pages
+        git fetch origin gh-pages:gh-pages
+        git checkout gh-pages || git checkout -b gh-pages
+        git merge --allow-unrelated-histories origin/gh-pages
 
-    - name: Switch to gh-pages and merge with main
+    - name: Copy files from main
       run: |
-        git checkout gh-pages
-        git merge --allow-unrelated-histories main
+        rsync -av --exclude=build --exclude=.git ./ /path/to/gh-pages
 
-    - name: Remove all files except build
+    - name: Install dependencies and build
       run: |
-        rm -rf .github/ README.md
-        npm ci
+        npm install
         npm run build
-        rm -rf !(build)
+
+    - name: Remove unnecessary files
+      run: |
+        ls | grep -v 'build' | xargs rm -rf
 
     - name: Commit and push changes
       run: |
         git add .
         git commit -m "Build and deploy updates"
         git push origin gh-pages
-
-    - name: Switch back to main branch
-      run: |
-        git checkout main
-        rm -rf build/
