Feat: Deploy file #5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Copy files from main
       run: |
-        rsync -av --exclude=build --exclude=.git ./ /path/to/gh-pages
+        rsync -av --exclude=build --exclude=.git ./
 
     - name: Install dependencies and build
       run: |
