Feat: Deploy file #5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,10 @@ jobs:
 
     - name: Commit and push changes
       run: |
+        cd /path/to/gh-pages
+        git config --local user.email "nathanmarques20@yahoo.com.br"
+        git config --local user.name "NathanMarques2001"
         git add .
         git commit -m "Build and deploy updates"
         git push origin gh-pages
+      
