Feat: Deploy file #5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
         git merge --allow-unrelated-histories origin/gh-pages
 
     - name: Copy files from main
-      run: |
-        rsync -av --exclude=build --exclude=.git ./
+      run: rsync -av --exclude=build --exclude=.git ./
 
     - name: Install dependencies and build
       run: |
@@ -29,8 +28,11 @@ jobs:
         npm run build
 
     - name: Remove unnecessary files
-      run: |
-        ls | grep -v 'build' | xargs rm -rf
+      run: ls | grep -v 'build' | xargs rm -rf
+
+    - name: Move build files to root
+      run: mv build/* .
+      
 
     - name: Commit and push changes
       run: |
