--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,12 @@ jobs:
         git checkout gh-pages || git checkout -b gh-pages
         git merge --allow-unrelated-histories origin/gh-pages
 
-    - name: Set working directory
-      run: cd ${{ github.workspace }}
-
     - name: Copy files from main
       run: rsync -av --exclude=build --exclude=.git ./
 
     - name: Install dependencies and build
       run: |
+        cd ${{ github.workspace }}
         npm install
         npm run build
 
