--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,13 @@ jobs:
         git checkout gh-pages || git checkout -b gh-pages
         git merge --allow-unrelated-histories origin/gh-pages
 
+    - name: Set working directory for rsync
+      run: cd ${{ github.workspace }}
+      
     - name: Copy files from main
-      run: rsync -av --exclude=build --exclude=.git ./
+      run: |
+          rsync -av --exclude=build --exclude=.git ./
+      
 
     - name: Install dependencies and build
       run: |
