--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Install dependencies and build
       run: |
-        npm install
+        npm ci
         npm run build
 
     - name: Remove unnecessary files
