--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       
     - name: Install dependencies and build
       run: |
-        npm ci
+        npm install
         npm run build
 
     - name: Remove unnecessary files
