--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,8 @@ jobs:
 
     - name: Ensure gh-pages branch exists
       run: |
-        git fetch origin gh-pages:gh-pages
-        git checkout gh-pages || git checkout -b gh-pages
-        git merge --allow-unrelated-histories origin/gh-pages
-
-    - name: Set working directory for rsync
-      run: cd ${{ github.workspace }}
+        git checkout gh-pages
+        git merge main
       
     - name: Install dependencies and build
       run: |
