--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
 
     - name: Ensure gh-pages branch exists
       run: |
+        git config --local user.email "nathanmarques20@yahoo.com.br"
+        git config --local user.name "NathanMarques2001"
         git fetch origin gh-pages:gh-pages
         git checkout gh-pages || git checkout -b gh-pages
         git merge --allow-unrelated-histories main
