Update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nathanmarques2001.github.io/Canva-Tese/",
+  "homepage": "https://presleyson.github.io/Canva-Tese/",
   "name": "canva",
   "version": "0.1.0",
   "private": true,
