--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Check if pull request is merged
+        run: |
+          if [ "${{ github.event_name }}" == "pull_request" ] && [ "${{ github.event.pull_request.merged }}" == "true" ]; then
+            echo "Pull request merged. Deploying..."
+          else
+            echo "Pull request not merged. Skipping deployment."
+            exit 78
+          fi
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
