--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://presleyson.github.io/Canva-Tese/",
+  "homepage": "http://presleyson.github.io/AgitarCanvas/",
   "name": "canva",
   "version": "0.1.0",
   "private": true,
